# revolut-devops-test

./: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
app/: log_config.yaml  main.py
app/database/: models.py  session.py
app/internal/: utils.py  validators.py
app/routers/: hello.py  management.py
docs/system-diagram/: system-diagram.drawio
k8s/hello-app/: Chart.yaml  values.yaml
k8s/hello-app/templates/: _helpers.tpl  deployment.yaml  service.yaml
tests/integration/: test_hello.py
tests/unit/: test_validators.py
